# fastapi-template

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py  db.py  error_reporting.py  errors.py  main.py  setup.py  utils.py
app/commands/: __main__.py
app/health/: handlers.py
app/migrations/: env.py
app/migrations/versions/: 2022-07-21_add_notes_table_1c9c682bb2ed.py
app/notes/: db.py  handlers.py  models.py  services.py  tables.py
scripts/: init.sh  start.dev.sh  start.sh  test.sh  upgrade-db.sh
tests/: conftest.py
tests/notes/: factories.py  test_notes_handlers.py
